--- a/accounts/templates/accounts/edit_home.html
+++ b/accounts/templates/accounts/edit_home.html
@@ -102,8 +102,8 @@
 		<div class="col-md-8">
 				<div class="card">
 				<div class="card-header card-header-primary">
-					<h4 class="card-title">upcomming Courses</h4>
-					<p class="card-category">Update upcomming Courses</p>
+					<h4 class="card-title">upcoming Courses</h4>
+					<p class="card-category">Update upcoming Courses</p>
 				</div>
 				<div class="card-body">
 					<form method="post" action="/account/ehome/">
@@ -146,8 +146,8 @@
 					<div class="col-md-12">
 						<div class="card">
 							<div class="card-header card-header-primary">
-								<h4 class="card-title ">Upcomming Courses</h4>
-								<p class="card-category"> List of Upcomming Courses</p>
+								<h4 class="card-title ">Upcoming Courses</h4>
+								<p class="card-category"> List of Upcoming Courses</p>
 							</div>
 							<div class="card-body">
 								<div class="table-responsive">
