--- a/accounts/templates/base_accounts.html
+++ b/accounts/templates/base_accounts.html
@@ -104,7 +104,7 @@
             <ul class="navbar-nav">
               {% if user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'accounts:view_profile' %}">
+                <a class="nav-link" href="{% url 'accounts:profile' %}">
                   <i class="material-icons">person</i>User Profile
                 </a>
               </li>
