--- a/accounts/templates/accounts/home.html
+++ b/accounts/templates/accounts/home.html
@@ -5,10 +5,10 @@
     {% load static %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Build your coaching website free. CoachingWala helps you to build your website free. It will enable you to manage your coaching content dynamically. You can upload courses information, coaching address, upcoming classes, news, new announcement dynamically and many more.">
+    <meta name="author" content="CoachingWala">
 
-    <title>Adopt Software</title>
+    <title>CoachingWala</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'accounts/assets/home/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Myci by Adopt Software</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">CoachingWala</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -40,9 +40,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#services">Services</a>
             </li>
-            <li class="nav-item">
+          <!--  <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
@@ -54,7 +54,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="{% url 'accounts:login' %}">Login</a>
-              </li>
+            </li>
           </ul>
         </div>
       </div>
@@ -111,7 +111,7 @@
       </div>
     </section>
 
-    <!-- Portfolio Grid -->
+    <!-- Portfolio Grid 
     <section class="bg-light" id="portfolio">
       <div class="container">
         <div class="row">
@@ -207,7 +207,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- About -->
     <section id="about">
@@ -415,7 +415,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Contact Us</h2>
-            <h3 class="section-subheading text-muted">We will try to reach you soon...</h3>
+            <h3 class="section-subheading text-muted">Have any questions or concerns? We are here to help!</h3>
           </div>
         </div>
         <div class="row">
@@ -435,15 +435,19 @@
                     <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
                     <p class="help-block text-danger"></p>
                   </div>
-                </div>
-                <div class="col-md-6">
                   <div class="form-group">
                     <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                      <h5 class="help-block text-primary">Mobiles: +91-8147283162</h5>
+                      <h5 class="help-block text-primary">Email: help.coachingwala@gmail.com</h5>
+                  </div>
+                </div>
                 <div class="clearfix"></div>
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-left">
                   <div id="success"></div>
                   <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
                 </div>
