--- a/edu/templates/base.html
+++ b/edu/templates/base.html
@@ -9,7 +9,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
   {% load static %}
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Build your coaching website free. CoachingWala helps you to build your website free. It will enable you to manage your coaching content dynamically. You can upload courses information, coaching address, upcoming classes, news, new announcement dynamically and many more.">
+  <meta name="author" content="CoachingWala">
 	<title>Online Education</title>
 	<link rel="favicon" href="{% static 'edu/assets/images/favicon.png' %}">
   <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
@@ -18,7 +20,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<link rel="stylesheet" href="{% static 'edu/assets/css/bootstrap-theme.css' %}" media="screen"> 
   <link rel="stylesheet" href="{% static 'edu/assets/css/style.css' %}">
   <link rel="stylesheet" href="{% static 'edu/assets/css/custom.css' %}">
-    <link rel='stylesheet' id='camera-css' href="{% static 'edu/assets/css/camera.css' %}" type='text/css' media='all'> 
+  <link rel='stylesheet' id='camera-css' href="{% static 'edu/assets/css/camera.css' %}" type='text/css' media='all'> 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 	<script src="assets/js/html5shiv.js"></script>
