Update user password

--- a/edu/templates/edu/courses.html
+++ b/edu/templates/edu/courses.html
@@ -15,7 +15,7 @@
 		<div class="col-md-2 col-lg-2 col-ms-12">
 			<ul class="nav navbar-nav navbar-default">
 				{% for key, values in result.courses.items %}
-				<li class="nav-item"><a class="nav-link" href="#{{key}}">{{key}}</a></li>
+				<li class="nav-item"><a class="nav-link" href="#{{key}}">{{key}}</a></li> <br>
 				{% endfor %}
 			</ul>
 		</div>
