--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -1,16 +1,37 @@
-{% extends 'base.html' %}
-
-{% block head %}
-	<title>Edit Profile</title>
-{% endblock %}
+{% extends 'base_accounts.html' %}
+{% load crispy_forms_tags %}
+{% load static %}
 
 {% block body %}
-	<div class="container">
-			<form method="post">
-				{% csrf_token %}
-        		{{ form.as_p }}
-        		<button type="submit">Submit</button>
-	        </form>
+
+<div class="content">
+	<div class="container-fluid">
+	  <div class="row">
+			<div class="col-md-8">
+		  <div class="card">
+			<div class="card-header card-header-primary">
+			  <h4 class="card-title">Change Password</h4>
+			  <p class="card-category">Update your password</p>
+			</div>
+			<div class="card-body">
+			  <form method="post">
+				<div class="row">
+				  <div class="col-md-12">
+					<div class="form-group">
+					  <div class="form-group">
+						{% csrf_token %}
+						{{ form|crispy }}
+					  </div>
+					</div>
+				  </div>
+				</div>
+				<button type="submit" class="btn btn-primary pull-right">Submit</button>
+				<div class="clearfix"></div>
+			  </form>
+			</div>
+		  </div>
+		</div>
+	  </div>
 	</div>
-	
+  </div>
 {% endblock %}
