--- a/accounts/templates/base_accounts.html
+++ b/accounts/templates/base_accounts.html
@@ -109,10 +109,14 @@
             </form> --> 
             <ul class="navbar-nav">
               {% if user.is_authenticated %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'accounts:profile' %}">
-                  <i class="material-icons">person</i>User Profile
+              <li class="nav-item dropdown">
+                <a class="nav-link" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <i class="material-icons">settings</i> Setting
                 </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="{% url 'accounts:profile' %}">User Profile</a>
+                  <a class="dropdown-item" href="{% url 'accounts:change_password' %}">Change Password</a>
+                </div>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'accounts:logout' %}">
