--- a/edu/templates/edu/contact.html
+++ b/edu/templates/edu/contact.html
@@ -59,10 +59,7 @@
 								<label>Message</label>
 								<textarea class="form-control" placeholder="Write you message here..." style="height:100px;" name="message" required></textarea>
 							</div>
-							<div class="form-group" style="display:none">
-									<label>DomUrl</label>
-									<input class="form-control" id="domurl" name="domurl" placeholder="domurl" required>
-							</div>
+							<input class="form-control" id="domurl" name="domurl" style="display:none" required>
 							<button type="submit" class="btn btn-two">Send message</button><p><br/></p>
 						</form>
 					</div>
